turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:32: error: not found: value UTURN
    case UTURN => left() ; left() ; forward()
         ^