turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code


var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
    
 	var color = getCouleurSol()
  var index = 0
  
  for ((c, i) <- colors.zipWithIndex){
    if (color == c){
      index = i
    }
  }

  
  if (index == rule.length - 1){
    setBrushColor(colors(0))
  }else{
    setBrushColor(colors(index + 1))
  }
  
  brushDown()
  brushUp()
  
  rule(state)(index)(NEXT_MOVE) match{
    case STOP => 
    case NOTURN => forward()
    case LEFT => left() ; forward()
    case UTURN => left() ; left() ; forward()
    case RIGHT => right(); forward()
  }
  
  if (state == rule.length - 1){
    state = 0
  }else{
    state += 1
  }
}